[package]
name = "codectrl"
version = "1.0.0"
edition = "2021"
authors = ["Samuel Boyden <s.boyden@authentura.com>"]
license = "MIT"
description = "The Rust logger integration for CodeCTRL"
repository = "https://github.com/Authentura/codectrl-rust-logger"
homepage = "https://codectrl.authentura.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
ciborium = "0.2"
codectrl-protobuf-bindings = { git = "https://github.com/Authentura/codectrl-rust-protobuf-bindings", tag = "v0.8.2" }
futures-util = "0.3"
hashbag = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.18", features = ["net", "rt-multi-thread", "io-util"] }
tonic = "0.7"

[dev-dependencies]
anyhow = "*"
tokio = { version = "1.18", features = ["net", "rt-multi-thread", "io-util"] }
chrono = "*"
rand = "0.8"
